🐛 FIX: Bug with visibility of search input

--- a/03_СSS_HOMEWORK/style.css
+++ b/03_СSS_HOMEWORK/style.css
@@ -73,7 +73,7 @@ td.dots {
   background: #777777;
   border: 1px solid #777777;
   border-radius: 7px;
-  width: 58%;
+  width: 200px;
   height: 30px;
   float: right;
 }
